# skewmatrix-examples

./: CMakeLists.txt
AutoTransform2/: AutoTransform2.fs  AutoTransform2.vs  CMakeLists.txt  README.txt  at2demo.cpp  test.osg
CMakeModules/: CMakeMacros.cmake  FindBullet.cmake  FindOSGAudio.cmake  FindOSGBullet.cmake  FindOSGBulletPlus.cmake  FindOSGHelper.cmake  FindOSGWorks.cmake  Findosg.cmake
CircleHighlight/: CMakeLists.txt  CircleHighlight.cpp
CircleHighlight2/: CMakeLists.txt  CircleHighlight2.cpp  CircleSupport.cpp  CircleSupport.h
ComplexSurfaces/: CMakeLists.txt  ComplexSurfaces.cpp  GL2Scene.cpp  GL2Scene.h  LightManipulator.h  README.txt  osgshaders.cpp
ComplexSurfaces/shaders/: basicbumpmap.vert  concrete.frag  dirt.frag  grass.frag
DIStreamlines/: CMakeLists.txt  DIStreamlines.cpp
Data/: AutoTransform2.fs  AutoTransform2.vs  DepthPeelCompare.fs  DepthPeelCompare.vs  DepthPeelFinal.fs  DepthPeelFinal.vs  at2test.osg  circle.fs  circle.gs  circle.vs  circleText.fs  circleText.vs  gl3SafeCow.fs  gl3SafeCow.vs  lightingFrag.frag  lightingFrag.vert  lightingVert.frag  lightingVert.vert  mayaViewer.fs  mayaViewer.vs  plaincow.osg  ps-worker.osg  shaderlab.fs  shaderlab.vs  shadertext.fs  streamline.vs  streamline2.vs  streamline3.vs  tank.fs  tank.vs  trans-mixed.osg  trcow.osg  trteapot.osg  vectorfield.vs  warpData.osg  warpModel.osg
Data/tank/: D1300_dds.ive  D201_AG201_dds.ive  D802_dds.ive
DepthOfField/: CMakeLists.txt  DepthOfField.cpp
DepthOfField2/: CMakeLists.txt  DepthOfField2.cpp
DepthPeel/: CMakeLists.txt  DepthPeel.cpp  DepthPeelGroup.cpp  DepthPeelGroup.h  DepthPeelRenderStage.cpp  DepthPeelRenderStage.h
GeometryOpt/: CMakeLists.txt  CountsVisitor.cpp  CountsVisitor.h  GeometryOpt.cpp  OptVisitor.cpp  OptVisitor.h
Slider/: CMakeLists.txt  Slider.cpp
TextureSubload/: CMakeLists.txt  README.txt  textureSubload.cpp
VectorField/: CMakeLists.txt  VectorField.cpp
WarpVertex/: CMakeLists.txt  WarpVertex.cpp
bulletcallback/: CMakeLists.txt
bulletsound/: CMakeLists.txt  Material.h  SoundTable.cpp  SoundTable.h  SoundUtilities.cpp  SoundUtilities.h  bulletsound.cpp
character/: CMakeLists.txt  CharacterFixVisitor.cpp  CharacterFixVisitor.h  character.cpp
checkindices/: CMakeLists.txt  checkindices.cpp
depthpartition/: CMakeLists.txt  depthpartition.cpp
desctool/: CMakeLists.txt  RemoveByDesc.cpp  RemoveByDesc.h  main.cpp
dwgvisitor/: CMakeLists.txt  CompressSubgraphVisitor.cpp  CompressSubgraphVisitor.h  RemoveNodeNameVisitor.cxx  RemoveNodeNameVisitor.h  main.cpp
ghostchar/: CMakeLists.txt  LocalKinematicCharacterController.cpp  LocalKinematicCharacterController.h  character.cpp  character.h  ghostchar.cpp  tracker.cpp  tracker.h  world.cpp  world.h
gl3SafeCow/: CMakeLists.txt  gl3SafeCow.cpp
glow/: CMakeLists.txt  glow.cpp
indexcheck/: CMakeLists.txt  indexcheck.cpp
lighting/: CMakeLists.txt  lighting.cpp
mayaviewer/: CMakeLists.txt  LightManipulator.cpp  LightManipulator.h  RenderPrep.cpp  RenderPrep.h  mayaviewer.cpp
meshopt/: CMakeLists.txt  meshopt.cpp
mipmaplimit/: CMakeLists.txt  MipMapLimiter.cpp  MipMapLimiter.h  UnRefImageDataVisitor.cxx  UnRefImageDataVisitor.h  mipmaplimit.cpp  multiple.bat
mrtclear/: CMakeLists.txt  mrtclear.cpp
msmrt/: msmrt-Josh.cpp  msmrt.cpp
nodeshare/: CMakeLists.txt  ShareNodes.cpp  ShareNodes.h  main.cpp
opacityvisitor/: CMakeLists.txt  TransparencySupport.cpp  TransparencySupport.h  main.cpp
oqdebug/: CMakeLists.txt  CameraImageCaptureCallback.cxx  CameraImageCaptureCallback.h  oqdebug.cpp  pqdebug.cpp
rtt/: CMakeLists.txt  rtt.cpp
rttcapture/: CMakeLists.txt  CameraImageCaptureCallback.cxx  rttcapture.cpp
scripts/: testtank.sh
shadertext/: CMakeLists.txt  shadertext.cpp
streamlines1/: CMakeLists.txt
streamlines2/: CMakeLists.txt  streamlines2.cpp
streamlines3/: CMakeLists.txt  streamlines3.cpp
tankvis/: CMakeLists.txt  TankData.cpp  TankData.h  tankvis.cpp
texmerge/: CMakeLists.txt  ParallelVisitor.cpp  ParallelVisitor.h  texmerge.cpp
textureatlas/: CMakeLists.txt  textureatlas.cpp
uniformperf/: CMakeLists.txt  gf470.ods  gf9800m.ods  uniformperf.cpp
uniqifierstate/: CMakeLists.txt  uniqifierstate.cpp
