cmake_minimum_required(VERSION 2.6)

# # # # # #  project setup  # # # # # #
PROJECT( ISUExamples )
SET( CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}" )
SET( LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single directory for all libraries." )
MARK_AS_ADVANCED( LIBRARY_OUTPUT_PATH )
SET( EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "Single directory for all executables." )
SET(CMAKE_DEBUG_POSTFIX  "d")
MARK_AS_ADVANCED( EXECUTABLE_OUTPUT_PATH )
MAKE_DIRECTORY( ${PROJECT_BINARY_DIR}/bin )

# Define macro that helps us append 'd' to debug executables/libs on Windows
INCLUDE( CMakeMacros )


FIND_PACKAGE( osg REQUIRED )
FIND_PACKAGE( OSGWorks REQUIRED )
FIND_PACKAGE( OpenGL REQUIRED )
FIND_PACKAGE( Bullet )
FIND_PACKAGE( OSGBullet )
FIND_PACKAGE( OSGBulletPlus )
FIND_PACKAGE( OpenAL )
FIND_PACKAGE( OSGAudio )

GET_FILENAME_COMPONENT( OSG_LIBRARIES_DIR ${OSG_LIBRARY} PATH)
INCLUDE_DIRECTORIES(
    ${OSG_INCLUDE_DIRS}
    ${OSGWORKS_INCLUDE_DIR}
    ${OPENGL_INCLUDE_DIR}
)
LINK_DIRECTORIES(
    ${OSG_LIBRARIES_DIR}
)


ADD_SUBDIRECTORY( character )
ADD_SUBDIRECTORY( CircleHighlight )
ADD_SUBDIRECTORY( CircleHighlight2 )
ADD_SUBDIRECTORY( ComplexSurfaces )
ADD_SUBDIRECTORY( DepthOfField )
ADD_SUBDIRECTORY( DepthOfField2 )
ADD_SUBDIRECTORY( depthpartition )
ADD_SUBDIRECTORY( DepthPeel )
ADD_SUBDIRECTORY( GeometryOpt )
ADD_SUBDIRECTORY( gl3SafeCow )
ADD_SUBDIRECTORY( glow )
ADD_SUBDIRECTORY( indexcheck )
ADD_SUBDIRECTORY( msmrt )
ADD_SUBDIRECTORY( rtt )
ADD_SUBDIRECTORY( shadertext )
ADD_SUBDIRECTORY( Slider )
ADD_SUBDIRECTORY( streamlines1 )
ADD_SUBDIRECTORY( streamlines2 )
ADD_SUBDIRECTORY( streamlines3 )
ADD_SUBDIRECTORY( VectorField )
ADD_SUBDIRECTORY( WarpVertex )
ADD_SUBDIRECTORY( AutoTransform2 )

# Bullet examples
# message( STATUS "Bullet: " ${BULLET_FOUND} )
# message( STATUS "osgBullet " ${OSGBULLET_FOUND} )
# message( STATUS "osgBulletPlus " ${OSGBULLETPLUS_FOUND} )
IF( BULLET_FOUND AND OSGBULLET_FOUND AND OSGBULLETPLUS_FOUND )
    OPTION( EXAMPLES_USE_DOUBLE_PRECISION "Use Bullet built with double precision" OFF )
    IF( EXAMPLES_USE_DOUBLE_PRECISION )
        ADD_DEFINITIONS( -DBT_USE_DOUBLE_PRECISION)
    ENDIF( EXAMPLES_USE_DOUBLE_PRECISION )

    INCLUDE_DIRECTORIES(
        ${BULLET_INCLUDE_DIR}
        ${BULLET_EXTRAS_INCLUDE_DIR}
        ${OSGBULLET_INCLUDE_DIR}
        ${OSGBULLETPLUS_INCLUDE_DIR}
    )
    # TBD add bullet-specific examples here
    #ADD_SUBDIRECTORY( bullet_tbd )

#   Collision-triggered sound examples
    IF( OSGAUDIO_FOUND AND OPENAL_FOUND )
        INCLUDE_DIRECTORIES(
            ${OPENAL_INCLUDE_DIR}
            ${OSGAUDIO_INCLUDE_DIR}
        )
        ADD_SUBDIRECTORY( bulletsound )
    ENDIF( OSGAUDIO_FOUND AND OPENAL_FOUND )
ENDIF( BULLET_FOUND AND OSGBULLET_FOUND AND OSGBULLETPLUS_FOUND )

IF( OSGAUDIO_FOUND )
#    ADD_SUBDIRECTORY( SoundStateCull )
ENDIF( OSGAUDIO_FOUND )
